# stk-log

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h.in  log.cpp  log.h  main.cpp
